# hf_agent_course

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  agent.py  app.py  check_setup.py  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  setup.sh  system_prompt.txt  tools.py
